# metapepview

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
annotation/: index.html
annotation-pipeline/: index.html
build-reference-dataset/: index.html
community-visualization/: index.html
data-import/: index.html
docs/: annotation-pipeline.md  annotation.md  build-reference-dataset.md  community-visualization.md  data-import.md  evaluate-taxonomy.md  experiment-evaluation.md  experiment-performances-biases.md  function-visualization.md  getting-started.md  index.md  installation.md  prepare-input-data.md  project-table.md  quantification.md  spectra-processing.md  taxonomy-dropoff.md  taxonomy-visualization.md
docs/stylesheets/: extra.css
evaluate-taxonomy/: index.html
experiment-evaluation/: index.html
experiment-performances-biases/: index.html
function-visualization/: index.html
getting-started/: index.html
installation/: index.html
introduction/: index.html
prepare-input-data/: index.html
project-table/: index.html
psm-evaluation/: index.html
quantification/: index.html
search/: search_index.json
spectra-processing/: index.html
src/: constants.py  index.py  pywebview_entrypoint.py  server.py  test.py
src/MetaPepUtils/: buildref.py
src/MetaPepView/: constants.py  html_templates.py  index.py  server.py
src/assets/: font_size.css
stylesheets/: extra.css
taxonomy-dropoff/: index.html
taxonomy-visualization/: index.html
usage-guide/: index.html
(+214 files in other folders)
